# libnov

./: .gitignore  Cargo.toml  README.md  install-deps.sh  install-python-cross-win64.sh  install-python.sh  load-image-dx11.bat  load-image-dx12.bat  load-image-gl.sh  load-image-metal.sh  load-image.bat  load-image.sh  run-dx11.bat  run-dx12.bat  run-gl.sh  run-metal.sh  run.bat  run.sh
cmd/load-image/: main.rs
data/src/: main.py
data/src/nov/: example1.py
shader/: default.frag  default.vert
src/: conf.rs  constant.rs  file.rs  lib.rs  python.rs  result.rs  view.rs  window.rs
